<resources>
    <string name="app_name">DLauncher</string>
    <string name="app">App</string>
    <string name="superscript">ᵂ</string>
    <string name="set_as_default_launcher">Set as default launcher</string>
    <string name="app_text_color">Text color</string>
    <string name="double_tap_to_lock_screen">Double tap to lock screen</string>
    <string name="experimental_">(experimental)</string>
    <string name="admin_permission_message">Olauncher promises to use lock screen permission responsibly.</string>
    <string name="about">About</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="change_default_launcher">Change default launcher</string>
    <string name="fork_info">DLauncher is a fork of Olauncher.</string>
    <string name="email">Email</string>
    <string name="github">Github</string>
    <string name="donate">Donate</string>
    <string name="long_press_for_settings">Long press anywhere for more</string>
    <string name="swipe_up_for_apps">Swipe up for all apps</string>
    <string name="apps_on_home_screen">Apps on home screen</string>
    <string name="daily_wallpaper_update">Daily new wallpaper</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="center">Center</string>
    <string name="home_layout_alignment">Home alignment</string>
    <string name="swipe_left_app">Swipe left app</string>
    <string name="swipe_right_app">Swipe right app</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="scroll_to_hide_keyboard">Scroll to hide keyboard</string>
    <string name="type_to_search">Type to search</string>
    <string name="swipe_left_right_apps">Swipe left right apps</string>
    <string name="_0">0</string>
    <string name="okay_got_it">Okay, got it</string>
    <string name="double_tap_lock_is_enabled_message">If double tap lock disables fingerprint or face unlock, open Olauncher settings, tap on \'experimental\' and follow the instructions. Thank you.</string>
    <string name="triple_tap_lock_message">Due to updated Android security rules, apps cannot lock some phones normally.
        \nSo once you double tap to lock, screen will go black and the phone will lock itself in 5 seconds.
        \nDuring this time, you can double tap to unlock. You can also triple tap anytime to fully lock the phone immediately.</string>
    <string name="auto_show_keyboard">Auto show keyboard</string>
    <string name="hide">Hide</string>
    <string name="about_hint">Tip: About has all the latest info about Olauncher.</string>
    <string name="rate_us_hint">Love using Olauncher? Please rate us. Thank you.</string>
    <string name="email_us_hint">Have feedback? Feel free to email us.</string>
    <string name="donate_hint">Want to support? Buy us a coffee :)</string>
</resources>